--- a/ansible/playbooks/k8s_setup.yaml
+++ b/ansible/playbooks/k8s_setup.yaml
@@ -1,11 +1,11 @@
 - hosts: all
   become: true
   tasks:
-
-  - name: change hostnames
+  
+  - name: Change hostnames
     shell: "hostnamectl set-hostname {{ hostvars[inventory_hostname]['private_dns_name'] }}"
 
-  - name: swap off
+  - name: Swap off
     shell: |
       free -m
       swapoff -a && sed -i '/ swap / s/^/#/' /etc/fstab
@@ -19,27 +19,35 @@
       EOF
       sysctl --system
 
-  - name: update apt-get
-    shell: apt-get update
+  - name: Update apt-get
+    apt:
+      update_cache: yes
 
   - name: Install packages that allow apt to be used over HTTPS
     apt:
-      name: "{{ packages }}"
+      name:
+        - apt-transport-https  
+        - curl
+        - ca-certificates
+      state: present
+
+  - name: Add Kubernetes APT repository
+    apt_repository:
+      repo: "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://apt.kubernetes.io/ kubernetes-jammy main"
       state: present
       update_cache: yes
-    vars:
-      packages:
-      - apt-transport-https  
-      - curl
-      - ca-certificates
 
-  - name: update apt-get and install kube packages
-    shell: |
-      curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - && \
-      echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list && \
-      apt-get update -q && \
-      apt-get install -qy kubelet=1.26.3-00 kubectl=1.26.3-00 kubeadm=1.26.3-00 kubernetes-cni docker.io
-      apt-mark hold kubelet kubeadm kubectl
+  - name: Install kube packages
+    apt:
+      name:
+        - kubelet=1.26.3-00
+        - kubectl=1.26.3-00
+        - kubeadm=1.26.3-00
+        - kubernetes-cni
+        - docker.io
+      state: present
+    notify:
+      - Hold kube packages
 
   - name: Add ubuntu to docker group
     user:
@@ -52,14 +60,11 @@
       state: restarted
       enabled: yes
 
-  # change the Docker cgroup driver by creating a configuration file `/etc/docker/daemon.json` 
-  # and adding the following line then restart deamon, docker and kubelet
-
-  - name: change the Docker cgroup
+  - name: Change the Docker cgroup
     shell: |
-      mkdir /etc/containerd
+      mkdir -p /etc/containerd
       containerd config default | sudo tee /etc/containerd/config.toml >/dev/null 2>&1
-      sed -i 's/SystemdCgroup \= false/SystemdCgroup \= true/g' /etc/containerd/config.toml
+      sed -i 's/SystemdCgroup = false/SystemdCgroup = true/g' /etc/containerd/config.toml
 
   - name: Restart containerd and enable
     service:
@@ -67,15 +72,14 @@
       state: restarted
       enabled: yes
 
-
 - hosts: role_master
   tasks:
       
-  - name: pull kubernetes images before installation
+  - name: Pull Kubernetes images before installation
     become: yes
     shell: kubeadm config images pull
 
-  - name: initialize the Kubernetes cluster using kubeadm
+  - name: Initialize the Kubernetes cluster using kubeadm
     become: true
     shell: |
       kubeadm init --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors=All
@@ -97,18 +101,19 @@
     command: kubeadm token create --print-join-command
     register: join_command_for_workers
 
-  - debug: msg='{{ join_command_for_workers.stdout.strip() }}'
+  - debug: 
+      msg: '{{ join_command_for_workers.stdout.strip() }}'
 
-  - name: register join command for workers
+  - name: Register join command for workers
     add_host:
       name: "kube_master"
       worker_join: "{{ join_command_for_workers.stdout.strip() }}"
 
-  - name: install Helm 
+  - name: Install Helm
     shell: |
       cd /home/ubuntu
       curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
-      chmod 777 get_helm.sh
+      chmod +x get_helm.sh
       ./get_helm.sh
 
 - hosts: role_worker
@@ -119,4 +124,15 @@
     shell: "{{ hostvars['kube_master']['worker_join'] }}"
     register: result_of_joining
 
-  - debug: msg='{{ result_of_joining.stdout }}'
+  - debug: 
+      msg: '{{ result_of_joining.stdout }}'
+
+# Handlers section
+handlers:
+  - name: Hold kube packages
+    apt:
+      name: 
+        - kubelet
+        - kubeadm
+        - kubectl
+      state: held
