--- a/ansible/playbooks/k8s_setup.yaml
+++ b/ansible/playbooks/k8s_setup.yaml
@@ -1,131 +1,135 @@
 - hosts: all
   become: true
   tasks:
-  
-  - name: Change hostnames
-    shell: "hostnamectl set-hostname {{ hostvars[inventory_hostname]['private_dns_name'] }}"
 
-  - name: Swap off
-    shell: |
-      free -m
-      swapoff -a && sed -i '/ swap / s/^/#/' /etc/fstab
+    - name: Change hostnames
+      shell: "hostnamectl set-hostname {{ hostvars[inventory_hostname]['private_dns_name'] }}"
 
-  - name: Enable the nodes to see bridged traffic
-    shell: |
-      cat << EOF | sudo tee /etc/sysctl.d/k8s.conf
-      net.bridge.bridge-nf-call-ip6tables = 1
-      net.bridge.bridge-nf-call-iptables = 1
-      net.ipv4.ip_forward                 = 1
-      EOF
-      sysctl --system
+    - name: Swap off
+      shell: |
+        free -m
+        swapoff -a && sed -i '/ swap / s/^/#/' /etc/fstab
 
-  - name: Update apt-get
-    apt:
-      update_cache: yes
+    - name: Enable the nodes to see bridged traffic
+      block:
+        - name: Create sysctl configuration
+          copy:
+            dest: /etc/sysctl.d/k8s.conf
+            content: |
+              net.bridge.bridge-nf-call-ip6tables = 1
+              net.bridge.bridge-nf-call-iptables = 1
+              net.ipv4.ip_forward                 = 1
+          
+        - name: Apply sysctl settings
+          command: sysctl --system
 
-  - name: Install packages that allow apt to be used over HTTPS
-    apt:
-      name:
-        - apt-transport-https  
-        - curl
-        - ca-certificates
-      state: present
+    - name: Update apt-get
+      apt:
+        update_cache: yes
 
-  - name: Add Kubernetes APT repository
-    apt_repository:
-      repo: "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://apt.kubernetes.io/ kubernetes-jammy main"
-      state: present
-      update_cache: yes
+    - name: Install packages that allow apt to be used over HTTPS
+      apt:
+        name:
+          - apt-transport-https  
+          - curl
+          - ca-certificates
+        state: present
 
-  - name: Install kube packages
-    apt:
-      name:
-        - kubelet=1.26.3-00
-        - kubectl=1.26.3-00
-        - kubeadm=1.26.3-00
-        - kubernetes-cni
-        - docker.io
-      state: present
-    notify:
-      - Hold kube packages
+    - name: Add Kubernetes APT repository
+      apt_repository:
+        repo: "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://apt.kubernetes.io/ kubernetes-jammy main"
+        state: present
+        update_cache: yes
 
-  - name: Add ubuntu to docker group
-    user:
-      name: ubuntu
-      group: docker
+    - name: Install kube packages
+      apt:
+        name:
+          - kubelet=1.26.3-00
+          - kubectl=1.26.3-00
+          - kubeadm=1.26.3-00
+          - kubernetes-cni
+          - docker.io
+        state: present
+      notify:
+        - Hold kube packages
 
-  - name: Restart docker and enable
-    service:
-      name: docker
-      state: restarted
-      enabled: yes
+    - name: Add ubuntu to docker group
+      user:
+        name: ubuntu
+        group: docker
+        append: yes
 
-  - name: Change the Docker cgroup
-    shell: |
-      mkdir -p /etc/containerd
-      containerd config default | sudo tee /etc/containerd/config.toml >/dev/null 2>&1
-      sed -i 's/SystemdCgroup = false/SystemdCgroup = true/g' /etc/containerd/config.toml
+    - name: Restart docker and enable
+      service:
+        name: docker
+        state: restarted
+        enabled: yes
 
-  - name: Restart containerd and enable
-    service:
-      name: containerd
-      state: restarted
-      enabled: yes
+    - name: Change the Docker cgroup
+      shell: |
+        mkdir -p /etc/containerd
+        containerd config default | tee /etc/containerd/config.toml >/dev/null 2>&1
+        sed -i 's/SystemdCgroup = false/SystemdCgroup = true/g' /etc/containerd/config.toml
+
+    - name: Restart containerd and enable
+      service:
+        name: containerd
+        state: restarted
+        enabled: yes
 
 - hosts: role_master
   tasks:
-      
-  - name: Pull Kubernetes images before installation
-    become: yes
-    shell: kubeadm config images pull
 
-  - name: Initialize the Kubernetes cluster using kubeadm
-    become: true
-    shell: |
-      kubeadm init --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors=All
+    - name: Pull Kubernetes images before installation
+      become: yes
+      shell: kubeadm config images pull
+
+    - name: Initialize the Kubernetes cluster using kubeadm
+      become: true
+      shell: |
+        kubeadm init --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors=All
     
-  - name: Setup kubeconfig for ubuntu user
-    become: true
-    command: "{{ item }}"
-    with_items:
-     - mkdir -p /home/ubuntu/.kube
-     - cp -i /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
-     - chown ubuntu:ubuntu /home/ubuntu/.kube/config
+    - name: Setup kubeconfig for ubuntu user
+      become: true
+      shell: |
+        mkdir -p /home/ubuntu/.kube
+        cp -i /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
+        chown ubuntu:ubuntu /home/ubuntu/.kube/config
 
-  - name: Install flannel pod network
-    remote_user: ubuntu
-    shell: kubectl apply -f https://github.com/coreos/flannel/raw/master/Documentation/kube-flannel.yml
+    - name: Install flannel pod network
+      remote_user: ubuntu
+      shell: kubectl apply -f https://github.com/coreos/flannel/raw/master/Documentation/kube-flannel.yml
 
-  - name: Generate join command
-    become: true
-    command: kubeadm token create --print-join-command
-    register: join_command_for_workers
+    - name: Generate join command
+      become: true
+      shell: kubeadm token create --print-join-command
+      register: join_command_for_workers
 
-  - debug: 
-      msg: '{{ join_command_for_workers.stdout.strip() }}'
+    - debug: 
+        msg: '{{ join_command_for_workers.stdout.strip() }}'
 
-  - name: Register join command for workers
-    add_host:
-      name: "kube_master"
-      worker_join: "{{ join_command_for_workers.stdout.strip() }}"
+    - name: Register join command for workers
+      add_host:
+        name: "kube_master"
+        worker_join: "{{ join_command_for_workers.stdout.strip() }}"
 
-  - name: Install Helm
-    shell: |
-      cd /home/ubuntu
-      curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
-      chmod +x get_helm.sh
-      ./get_helm.sh
+    - name: Install Helm
+      shell: |
+        cd /home/ubuntu
+        curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+        chmod +x get_helm.sh
+        ./get_helm.sh
 
 - hosts: role_worker
   become: true
   tasks:
 
-  - name: Join workers to cluster
-    shell: "{{ hostvars['kube_master']['worker_join'] }}"
-    register: result_of_joining
+    - name: Join workers to cluster
+      shell: "{{ hostvars['kube_master']['worker_join'] }}"
+      register: result_of_joining
 
-  - debug: 
-      msg: '{{ result_of_joining.stdout }}'
+    - debug: 
+        msg: '{{ result_of_joining.stdout }}'
 
 # Handlers section
 handlers:
