--- a/ansible/playbooks/k8s_setup.yaml
+++ b/ansible/playbooks/k8s_setup.yaml
@@ -40,8 +40,9 @@
 
   - name: update apt-get and install kube packages
     shell: |
+      sudo mkdir -p /etc/apt/keyrings
       curl -fsSL https://pkgs.k8s.io/core/stable/v1.28/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-      echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /' | tee /etc/apt/sources.list.d/kubernetes.list
+      echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable/v1.28/deb/ /' | tee /etc/apt/sources.list.d/kubernetes.list
       sudo apt-get update 
       sudo apt-get install -y kubelet=1.28.2-1.1 kubeadm=1.28.2-1.1 kubectl=1.28.2-1.1 kubernetes-cni docker.io
       sudo apt-mark hold kubelet kubeadm kubectl
