--- a/ansible/playbooks/k8s_setup.yaml
+++ b/ansible/playbooks/k8s_setup.yaml
@@ -38,14 +38,26 @@
       path: /etc/apt/sources.list.d/kubernetes.list
       state: absent
 
-  - name: update apt-get and install kube packages
-    shell: |
-      sudo mkdir -p /etc/apt/keyrings
-      curl -fsSL https://pkgs.k8s.io/core/stable/v1.28/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-      echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable/v1.28/deb/ /' | tee /etc/apt/sources.list.d/kubernetes.list
-      sudo apt-get update 
-      sudo apt-get install -y kubelet=1.28.2-1.1 kubeadm=1.28.2-1.1 kubectl=1.28.2-1.1 kubernetes-cni docker.io
-      sudo apt-mark hold kubelet kubeadm kubectl
+- name: Update apt-get and install Kubernetes packages
+  shell: |
+    # Ensure the /etc/apt/keyrings directory exists
+    sudo mkdir -p /etc/apt/keyrings
+
+    # Download the public signing key for the Kubernetes package repositories
+    curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.28/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+
+    # Add the new Kubernetes repository
+    echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
+
+    # Update the apt package index
+    sudo apt-get update 
+
+    # Install specific versions of Kubernetes packages
+    sudo apt-get install -y kubelet=1.28.2-1.1 kubeadm=1.28.2-1.1 kubectl=1.28.2-1.1 kubernetes-cni docker.io
+
+    # Hold Kubernetes packages at their current version to prevent unintended upgrades
+    sudo apt-mark hold kubelet kubeadm kubectl
+
 
 
 
