--- a/ansible/playbooks/k8s_setup.yaml
+++ b/ansible/playbooks/k8s_setup.yaml
@@ -12,7 +12,7 @@
 
   - name: Enable the nodes to see bridged traffic
     shell: |
-      cat << EOF | sudo tee /etc/sysctl.d/k8s.conf
+      cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
       net.bridge.bridge-nf-call-ip6tables = 1
       net.bridge.bridge-nf-call-iptables = 1
       net.ipv4.ip_forward                 = 1
@@ -29,29 +29,26 @@
       update_cache: yes
     vars:
       packages:
-      - apt-transport-https  
-      - curl
-      - ca-certificates
+        - apt-transport-https  
+        - curl
+        - ca-certificates
 
   - name: Remove old Kubernetes sources list if it exists
     ansible.builtin.file:
       path: /etc/apt/sources.list.d/kubernetes.list
       state: absent
 
-- name: Update apt-get and install Kubernetes packages
-  shell: |
-   
-    sudo mkdir -p /usr/share/keyrings
+  - name: Update apt-get and install Kubernetes packages
+    shell: |
+      sudo mkdir -p /usr/share/keyrings
 
-    # Download the public signing key for the Kubernetes package repositories
-    curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.28/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-    # Add the new Kubernetes repository
-    echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-jammy main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
-    # Update the apt package index
-    apt-get install -y kubelet=1.28.2-1.1 kubeadm=1.28.2-1.1 kubectl=1.28.2-1.1 kubernetes-cni docker.io
-    apt-mark hold kubelet kubeadm kubectl
-
-
+      # Download the public signing key for the Kubernetes package repositories
+      curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.28/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+      # Add the new Kubernetes repository
+      echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /' | tee /etc/apt/sources.list.d/kubernetes.list
+      # Update the apt package index
+      apt-get install -y kubelet=1.28.2-1.1 kubeadm=1.28.2-1.1 kubectl=1.28.2-1.1 kubernetes-cni docker.io
+      apt-mark hold kubelet kubeadm kubectl
 
   - name: Add ubuntu to docker group
     user:
@@ -64,12 +61,9 @@
       state: restarted
       enabled: yes
 
-  # change the Docker cgroup driver by creating a configuration file `/etc/docker/daemon.json` 
-  # and adding the following line then restart deamon, docker and kubelet
-
   - name: change the Docker cgroup
     shell: |
-      mkdir /etc/containerd
+      mkdir -p /etc/containerd
       containerd config default | sudo tee /etc/containerd/config.toml >/dev/null 2>&1
       sed -i 's/SystemdCgroup \= false/SystemdCgroup \= true/g' /etc/containerd/config.toml
 
@@ -81,35 +75,28 @@
 
 
 - hosts: role_master
+  become: true
   tasks:
-      
+
   - name: pull kubernetes images before installation
-    become: yes
     shell: kubeadm config images pull
 
   - name: initialize the Kubernetes cluster using kubeadm
-    become: true
     shell: |
       kubeadm init --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors=All
-    
+
   - name: Setup kubeconfig for ubuntu user
-    become: true
-    command: "{{ item }}"
-    with_items:
-     - mkdir -p /home/ubuntu/.kube
-     - cp -i /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
-     - chown ubuntu:ubuntu /home/ubuntu/.kube/config
+    shell: |
+      mkdir -p /home/ubuntu/.kube
+      cp -i /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
+      chown ubuntu:ubuntu /home/ubuntu/.kube/config
 
   - name: Install flannel pod network
-    remote_user: ubuntu
     shell: kubectl apply -f https://github.com/coreos/flannel/raw/master/Documentation/kube-flannel.yml
 
   - name: Generate join command
-    become: true
-    command: kubeadm token create --print-join-command
+    shell: kubeadm token create --print-join-command
     register: join_command_for_workers
-
-  - debug: msg='{{ join_command_for_workers.stdout.strip() }}'
 
   - name: register join command for workers
     add_host:
