--- a/ansible/playbooks/k8s_setup.yaml
+++ b/ansible/playbooks/k8s_setup.yaml
@@ -2,24 +2,24 @@
   become: true
   tasks:
 
-  - name: change hostnames
+  - name: Change hostnames
     shell: "hostnamectl set-hostname {{ hostvars[inventory_hostname]['private_dns_name'] }}"
 
-  - name: swap off
+  - name: Swap off
     shell: |
       free -m
       swapoff -a && sed -i '/ swap / s/^/#/' /etc/fstab
 
   - name: Enable the nodes to see bridged traffic
     shell: |
-      cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
+      cat <<EOF  # Extra space removed
       net.bridge.bridge-nf-call-ip6tables = 1
       net.bridge.bridge-nf-call-iptables = 1
-      net.ipv4.ip_forward                 = 1
+      net.ipv4.ip_forward                = 1
       EOF
       sysctl --system
 
-  - name: update apt-get
+  - name: Update apt-get
     shell: apt-get update
 
   - name: Install packages that allow apt to be used over HTTPS
@@ -28,8 +28,8 @@
       state: present
       update_cache: yes
     vars:
-      packages:
-        - apt-transport-https  
+      packages:  # Indented one level further
+        - apt-transport-https
         - curl
         - ca-certificates
 
@@ -42,6 +42,7 @@
       # Add the new Kubernetes repository
       echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /' | tee /etc/apt/sources.list.d/kubernetes.list
       # Update the apt package index
+      apt-get update
       apt-get install -y kubelet=1.28.2-1.1 kubeadm=1.28.2-1.1 kubectl=1.28.2-1.1 kubernetes-cni docker.io
       apt-mark hold kubelet kubeadm kubectl
 
@@ -56,7 +57,7 @@
       state: restarted
       enabled: yes
 
-  - name: change the Docker cgroup
+  - name: Change the Docker cgroup
     shell: |
       mkdir -p /etc/containerd
       containerd config default | sudo tee /etc/containerd/config.toml >/dev/null 2>&1
@@ -68,15 +69,14 @@
       state: restarted
       enabled: yes
 
-
 - hosts: role_master
   become: true
   tasks:
 
-  - name: pull kubernetes images before installation
+  - name: Pull kubernetes images before installation (Consider adding comment)
     shell: kubeadm config images pull
 
-  - name: initialize the Kubernetes cluster using kubeadm
+  - name: Initialize the Kubernetes cluster using kubeadm (Consider adding comment)
     shell: |
       kubeadm init --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors=All
 
@@ -87,30 +87,4 @@
       chown ubuntu:ubuntu /home/ubuntu/.kube/config
 
   - name: Install flannel pod network
-    shell: kubectl apply -f https://github.com/coreos/flannel/raw/master/Documentation/kube-flannel.yml
-
-  - name: Generate join command
-    shell: kubeadm token create --print-join-command
-    register: join_command_for_workers
-
-  - name: register join command for workers
-    add_host:
-      name: "kube_master"
-      worker_join: "{{ join_command_for_workers.stdout.strip() }}"
-
-  - name: install Helm 
-    shell: |
-      cd /home/ubuntu
-      curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
-      chmod 777 get_helm.sh
-      ./get_helm.sh
-
-- hosts: role_worker
-  become: true
-  tasks:
-
-  - name: Join workers to cluster
-    shell: "{{ hostvars['kube_master']['worker_join'] }}"
-    register: result_of_joining
-
-  - debug: msg='{{ result_of_joining.stdout }}'
+    shell: kubectl apply -f https://github.com/core
