--- a/ansible/playbooks/k8s_setup.yaml
+++ b/ansible/playbooks/k8s_setup.yaml
@@ -37,7 +37,7 @@
     shell: |
       sudo apt-get update
 # apt-transport-https may be a dummy package; if so, you can skip that package
-      sudo apt-get install -y apt-transport-https ca-certificates curl gnup
+      sudo apt-get install -y apt-transport-https ca-certificates curl gnupg
       sudo mkdir -p -m 755 /etc/apt/keyrings
 
       # Download the public signing key for the Kubernetes package repositories
